--- a/assets/css/project2.css
+++ b/assets/css/project2.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Montserrat:wght@800&family=Ubuntu:ital,wght@1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Montserrat:wght@800&family=Poppins:wght@400;500;600;700;800;900&family=Ubuntu:ital,wght@1,700&display=swap');
+
 body{
     color: white;
     font-size: small;
     background-color: #0b0b0f;
+    font-family: 'Poppins';
 }
 
 .header{
@@ -31,8 +34,8 @@ body{
     height: 100%;
     display: table-cell;
     vertical-align: middle;
-    font-family: 'Montserrat';
-    font-size: 32px;
+    font-family: 'Poppins';
+    font-size: 50px;
 }
 
 .logo_container h1 span{
@@ -55,8 +58,13 @@ body{
     vertical-align: middle;
     height: 100%;
     color: white;
-    font-family: 'Montserrat';
+    font-family: 'Poppins';
     font-size: 20px;
+}
+.navigation a li:hover{
+    cursor: pointer;
+    transform: scale(1.2);
+    transition: all 0.2s ease;
 }
 
 *{
@@ -94,7 +102,7 @@ ul{
     color: #ffffff;
     text-transform: capitalize;
     margin-bottom: 35px;
-    font-family: 'Montserrat';
+    font-family: 'Poppins';
     font-weight: 500;
     font-size: 20px;
 }
@@ -165,7 +173,7 @@ p{
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    font-family: 'Montserrat';
+    font-family: 'Poppins';
     font-weight: 500;
     font-size: 20px;
     padding-top: 30px;
@@ -182,7 +190,7 @@ p.hero-text{
     position: relative;
     background-clip: text;
     -webkit-background-clip: text;
-    font-family: 'Montserrat';
+    font-family: 'Poppins';
     font-weight: 500;
     font-size: 20px;
     padding-top: 30px;
@@ -201,21 +209,21 @@ p.hero-text{
 
 h2.h1-hero-title {
     color: white;
-    font-family: 'Montserrat';
+    font-family: 'Poppins';
     font-size: 50px;
 }
 
 h2.Assets-h2{
     color: rgb(37, 37, 126);
-    font-family: 'Montserrat';
+    font-family: 'Poppins';
     font-size: 15px;
-    padding-left: 19%;
+    padding-left: 12%;
     padding-top: 5%;
 }
 h1.Assets-h1{
-    font-family: 'Montserrat';
+    font-family: 'Poppins';
     font-size: 40px;
-    padding-left: 19%;
+    padding-left: 12%;
 }
 
 li {
@@ -228,6 +236,7 @@ li {
     border-radius: 8px;
     box-shadow: 1px;
     transition: 2px;
+    
 }
 
 .explore-card .card-banner {
@@ -256,23 +265,24 @@ span {
 
 .card{
     background: rgb(86, 81, 81);
-    width: 300px;
-    height: 500px;
-    margin: 10px;
+    width: 250px;
+    height: 400px;
+    margin: 30px;
     padding-left: 0px;
     border-radius: 15px;
+    
 }
 
 .card-image{
     background-color: #282a31;
-    height: 350px;
+    height: 250px;
     margin-bottom: 0px;
     background-size: cover;
     border-radius: 15px 15px 0 0;
 }
 
 .card-1{
-    background-image: url('https://codewithsadee.github.io/nftc/assets/images/author-banner-1.jpg');
+    background-image: url('https://codewithsadee.github.io/nftc/assets/images/auction-1.jpg');
 }
 
 .card-2{
@@ -321,61 +331,151 @@ span {
 
 h2.details{
     color: rgb(199, 199, 209);
-    font-family: 'Montserrat';
+    font-family: 'Poppins';
     font-size: 15px;
 }
 
 p.details{
     color: rgb(200, 200, 212);
-    font-family: 'Montserrat';
+    font-family: 'Poppins';
     font-size: 15px;
 }
 
 .card a{
-    padding: 0;
+    padding: 0px;
     display: block;
     text-align: center;
     color: rgb(37, 37, 126);
-    font-family: 'Montserrat';
+    font-family: 'Poppins';
     font-size: 15px;
+}
+
+#explore{
+    padding-bottom: 20px;
 }
 
 .card:hover{
     cursor: pointer;
-    transform: scale(1.03);
+    transform: scale(1.15);
     transition: all 1s ease;
 }
 
 .avatar{
-    font-size: 30px;
-    width: 3em;
-    height: 3em;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
-    background: #98c9c0;
-    display: inline-flex;
+    overflow: hidden;
+    margin:-10px;
+    
+}
+.avatar img{
+    width: 100%;
+}
+
+.avatar-group{
+    display: flex;
+    padding-left: 19%;
+    padding-top: 20px;
+}
+
+.hidden-avatars{
+    width: 100px;
+    height: 100px;
+    border-radius:50%;
+    background-color: #2c303a;
+    color: #fff;
+    display: flex;
     align-items: center;
     justify-content: center;
-    padding: 5%;
-}
-
-div.row{
-    padding-top: 2%;
-    padding-left: 19%;
-}
-
-.avatar::after{
-    content:attr(data-label);
-    font-family: 'Reader Pron', sans-serif;
-    color:#ffffff;
+    cursor: pointer;
+    transition: all 1s ease;
 }
 
 .avatar:hover{
     cursor: pointer;
-    transform: scale(1.03);
+    transform: scale(1.5);
     transition: all 1s ease;
 }
 
-div.avatar{
-    padding: 10px;
-    margin: 5px;
+.card-13{
+    background-image: url('https://codewithsadee.github.io/nftc/assets/images/author-banner-1.jpg');
+}
+
+.card-14{
+    background-image: url('https://codewithsadee.github.io/nftc/assets/images/author-banner-2.jpg');
+}
+
+.card-15{
+    background-image: url('https://codewithsadee.github.io/nftc/assets/images/author-banner-3.jpg');
+}
+.card-16{
+    background-image: url('https://codewithsadee.github.io/nftc/assets/images/author-banner-4.jpg');
+}
+.card-17{
+    background-image: url('https://codewithsadee.github.io/nftc/assets/images/author-banner-5.jpg');
+}
+.card-18{
+    background-image: url('https://codewithsadee.github.io/nftc/assets/images/author-banner-6.jpg');
+}
+.card-19{
+    background-image: url('https://codewithsadee.github.io/nftc/assets/images/author-banner-7.jpg');
+}
+.card-20{
+    background-image: url('https://codewithsadee.github.io/nftc/assets/images/author-banner-8.jpg');
+}
+
+
+.search{
+    width: 100%;
+    padding-top: 5%;
+
+    background-image: #0b0b0f;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.search-bar{
+    width: 100%;
+    max-width: 700px;
+    background: rgba(199, 199, 209,0.2);
+    display: flex;
+    align-items: center;
+    border-radius: 60px;
+    padding: 10px 20px;
+}
+
+.search-bar input{
+    background: transparent;
+    flex: 1;
+    border: 0;
+    outline: none;
+    padding: 24px 20px;
+    font-size: 20px;
+    color: #cac7ff;
+}
+
+::placeholder{
+    color: #cac7ff;
+}
+
+.search-bar button img{
+    width:25px;
+}
+
+.search-bar button{
+    border:0;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    background: #58629b;
+    cursor: pointer;
+}
+
+.search-bar button:hover{
+    cursor: pointer;
+    transform: scale(1.2);
+    transition: all 0.3s ease;
 }
